added recipe info for teriyaki

--- a/recipes/teriyak-chicken.html
+++ b/recipes/teriyak-chicken.html
@@ -6,7 +6,33 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Teriyaki Chicken</h1>
+    <h1>Teriyaki Chicken (Easy 15 Minute Recipe)</h1>
+    <img src="https://www.onceuponachef.com/images/2024/01/chicken-teriyaki-760x984.jpg" alt="teriyak-chicken">
+    <h2>Easy Teriyaki Chicken</h2>
+    <p>This tastes just like your favorite Asian take-out but you can have this ready faster than the time it would take to go pick up take-out! No marinade required.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        Chicken breasts
+        Olive Olive
+        Low-sodium soy sauce
+        Honey
+        Brown Sugar
+        Rice Vinegar
+        Seasme Olive
+        Ginger
+        Garlic
+        Cornstarch
+        Seaseme seeds and Grene Onions
+    </ul>
+
+    <h3>Steps for making Teriyaki Chicken</h3>
+    <ol>
+        Heat oil in a large non-stick skillet or wok.
+        Add chicken and let cook (giving space between pieces) until slightly browned on bottom then flip chicken pieces over and cook through.
+        While the chicken is cooking whisk together the teriyaki sauce mixture.
+        Pour sauce into the skillet once the chicken is just nearly finished cooking through and let the sauce cook and simmer until thickened.
+        Easy as that! Serve it warm over brown or white rice with steamed veggies.
+    </ol>
     <a href="../index.html">Back to Main Page</a>
 </body>
 </html>
