--- a/recipes/teriyak-chicken.html
+++ b/recipes/teriyak-chicken.html
@@ -12,26 +12,26 @@
     <p>This tastes just like your favorite Asian take-out but you can have this ready faster than the time it would take to go pick up take-out! No marinade required.</p>
     <h3>Ingredients</h3>
     <ul>
-        Chicken breasts
-        Olive Olive
-        Low-sodium soy sauce
-        Honey
-        Brown Sugar
-        Rice Vinegar
-        Seasme Olive
-        Ginger
-        Garlic
-        Cornstarch
-        Seaseme seeds and Grene Onions
+        <li>Chicken breasts</li>
+        <li>Olive Olive</li>
+        <li>Low-sodium soy sauce</li>
+        <li>Honey</li>
+        <li>Brown Sugar</li>
+        <li>Rice Vinegar</li>
+        <li>Seasme Olive</li>
+        <li>Ginger</li>
+        <li>Garlic</li>
+        <li>Cornstarch</li>
+        <li>Seaseme seeds and Green Onions</li>
     </ul>
 
     <h3>Steps for making Teriyaki Chicken</h3>
     <ol>
-        Heat oil in a large non-stick skillet or wok.
-        Add chicken and let cook (giving space between pieces) until slightly browned on bottom then flip chicken pieces over and cook through.
-        While the chicken is cooking whisk together the teriyaki sauce mixture.
-        Pour sauce into the skillet once the chicken is just nearly finished cooking through and let the sauce cook and simmer until thickened.
-        Easy as that! Serve it warm over brown or white rice with steamed veggies.
+        <li>Heat oil in a large non-stick skillet or wok.</li>
+        <li>Add chicken and let cook (giving space between pieces) until slightly browned on bottom then flip chicken pieces over and cook through.</li>
+        <li>While the chicken is cooking whisk together the teriyaki sauce mixture.</li>
+        <li>Pour sauce into the skillet once the chicken is just nearly finished cooking through and let the sauce cook and simmer until thickened.</li>
+        <li>Easy as that! Serve it warm over brown or white rice with steamed veggies.</li>
     </ol>
     <a href="../index.html">Back to Main Page</a>
 </body>
