title and back button for butterchicken

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/teriyak-chicken.html">Easy Teriyaki Chicken</a>
+    <ul>
+        <a href="./recipes/teriyak-chicken.html">Easy Teriyaki Chicken</a>
+        <a href="./recipes/butter-chicken.html">Butter Chicken at Home</a>
+    </ul>
+
 </body>
 </html>
