formatted recipe list on main page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <a href="./recipes/teriyak-chicken.html">Easy Teriyaki Chicken</a>
-        <a href="./recipes/butter-chicken.html">Butter Chicken at Home</a>
+        <li><a href="./recipes/teriyak-chicken.html">Easy Teriyaki Chicken</a></li>
+        <li><a href="./recipes/butter-chicken.html">Butter Chicken at Home</a></li>
     </ul>
 
 </body>
