--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="./recipes/teriyak-chicken.html">Easy Teriyaki Chicken</a></li>
         <li><a href="./recipes/butter-chicken.html">Butter Chicken at Home</a></li>
-        <li><a href="./recipes/bffsmoothie.html">Fruit and Yogurt Smoothie</a></li>
+        <li><a href="./recipes/bffsmoothie.html">Fruit and Yogurt Smm</a></li>
     </ul>
 
 </body>
