css styling main page

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/teriyak-chicken.html">Easy Teriyaki Chicken</a></li>
-        <li><a href="./recipes/butter-chicken.html">Butter Chicken at Home</a></li>
-        <li><a href="./recipes/bffsmoothie.html">Fruit and Yogurt Smm</a></li>
+        <li><a href="./recipes/teriyak-chicken">Easy Teriyaki Chicken</a></li>
+        <li><a href="./recipes/butter-chicken">Butter Chicken at Home</a></li>
+        <li><a href="./recipes/bffsmoothie">Fruit and Yogurt Smoothie</a></li>
     </ul>
 
 </body>
